--- a/style.css
+++ b/style.css
@@ -79,8 +79,7 @@ header a{
 }
 .deux{
     display: inline-flex;
-    height: 400px;
-    width: 1400px;   
+     height: 400px;
 }
 .text3{
     display: grid;
@@ -96,22 +95,21 @@ header a{
     margin-top: 40px;
     width: 50px;
 }
-.text4{
-    margin-left: -200px;
+
+ .text4{
+    margin-left: 90px;
     text-align: center;
-    line-height: 10px;
+    /* line-height: 10px; */
 }
 .text4 h2{
-    height: 18px;
-    width: 40px;
-    margin-left: 100px;
-    margin-top: 250px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    line-height: 15px;
+    font-size: 15px;
+    font-weight: 600;
     text-align: center;
     color: #000000;
+} 
+.flex{
+    margin-left: 80px;
 }
 .flex{
     display: inline-flex;
@@ -163,15 +161,23 @@ header a{
     margin-right: 20px;
 }
 .cin{
-    height: 500px;
+    /* height: 500px;
     width: 1440px;
-    background-color: white;
+    background-color: white; */
+    padding: 50px;
+    width: 1440px;
+}
+.pro{
+    width: 1000px;
+    display: flex;
+    justify-content: space-around;
+
 }
 .cin h2{
    text-align: center;
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-size: 35px;
-   margin-top: 80px;
+   
 }
 .cin p{
     text-align: center;
@@ -199,14 +205,24 @@ progress::-webkit-progress-bar{
     background-color: #A5C0AD;
     border-radius: 20px;
 }
- 
-
 .pro1 p{
    margin-right: 250px;
    margin-top: 80px;
    font-size: 15px;
    font-weight: 700;
    font-family: Georgia, 'Times New Roman', Times, serif; 
+}
+.bén p{
+    margin-left: 60px;  
+}
+.niar p{
+    margin-left: 120px;
+}
+.niét p{
+    margin-left: 100px;
+}
+.niént p{
+    margin-left: 50px;
 }
 .pro2 p{
     margin-right: 250px;
@@ -248,15 +264,13 @@ progress::-webkit-progress-bar{
     background-color: white;
 }
 .six{
-    height: 800px;
-    width: 1440px;
-    background-color: #A5C0AD;
+   height: 800px;   
+background-color: #A5C0AD;
 }
 .six h2{
-    color: white;
+   color: white;
    height: 32px;
-   width: 180px;
-   padding-top: 70px;
+   width: 180px;  
    margin-left: 600px;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 30px;
@@ -272,9 +286,10 @@ progress::-webkit-progress-bar{
 
 }
 .avatar{
-    display: inline-flex;
-    width: 1440px;
-    height: 404px;
+    display:flex;
+    justify-content: center;
+    /* width: 1440px; */
+    /* height: 404px; */
 }
 .avatar h4{
     height: 80px;
@@ -294,13 +309,14 @@ progress::-webkit-progress-bar{
     background-color: white; 
 }
 .imagejc{
+    display: flex;
     margin-left: 1px;
     margin-top: 55px;
 }
 .jane{
     height: 400px;
     width: 270px; 
-    margin-left: 50px;
+    margin-left: 10px;
     margin-top: 55px;
     background-color: white;
 }
@@ -311,14 +327,15 @@ progress::-webkit-progress-bar{
     margin-bottom: 5px;
 } 
 .imagejj{
+    display: flex;
     margin-left: 1px;
     margin-top: 55px;
 }
 .jacob{
     height: 400px;
     width: 270px; 
-    margin-left: 50px;
     margin-top: 55px;
+    margin-left: 60px;
     background-color: white;
 }
 .jacob h4{
@@ -328,13 +345,14 @@ progress::-webkit-progress-bar{
     margin-bottom: 5px;
 } 
 .imagela{
+    display: flex;
     margin-left: 1px;
     margin-top: 55px;
 }
 .leslie {
     height: 400px;
     width: 270px; 
-    margin-left: 50px;
+    margin-left: 60px;
     margin-top: 55px;
     background-color: white;
     }
@@ -345,15 +363,25 @@ progress::-webkit-progress-bar{
     margin-bottom: 5px;
 } 
 .imagebs{
+    display: flex;
     margin-left: 1px;
-    margin-top: 55px;
 }
 .brook{
     height: 400px;
     width: 270px; 
     margin-left: 50px;
     margin-top: 55px;
-    background-color: white;
+
+}
+.cadre-blanc{
+    background:white;
+    
+
+}
+.image-avatar img{
+
+  padding-left: 50px;
+
 }
 .brook h4{
     margin-left:0px ;
@@ -416,576 +444,24 @@ footer h6{
     margin-top: 65px;
 }
 @media screen and (max-width:480px){
-    
-    .deb{
-        width: 30%;
-        height: 67%;
-        font-size: 10px;
-        background-color: aqua;
-      }
-      .un{
-          width: 30%;
-          align-items: center;
-      }
-      .logo img{
-          width: 10%;
-          height: 15%;
-          margin-left: 180px;
-      }
-      .text1{
-        margin-left: -20px;
-        margin-top: 80px;
-        
-      }
-      
-      .text1 p{
-          font-size: 15px;
-          margin-bottom: 50px;
-          margin-left: 30px;
-      }
-      .deux{
-          height: 30%;
-          width: 30%;
-          align-items: center;
-          margin-left: 20px;
-      }
-      .text3{
-          margin-left: 5px;
-          height: 20%;
-          width: 20%;
-          border: none;
-      }
-      .text3 img{
-       width: 70%;
-       display: block;
-       margin-right: 10px;
-       margin-bottom: 200px;
-      }
-      .text4 h2{
-          display: block;
-          font-size: 12px;
-          font-weight: 600;
-          margin-left: 180px;
-          margin-bottom: 100px;
-      }
-      .text4 p{
-          width: 30%;
-          font-size: 8px;
-          margin-left: 170px;
-          margin-bottom: 80px;
-      }
-      .trois{
-          width: 30%;
-          align-items: center;
-      }
-      .trois h1{
-          margin-LEFt: 180px;
-          font-size: 12px;
-          font-weight: 600;
-      }
-      .trois p{
-          margin-left: 20px;
-          font-size: 8px;
-      }
-      .quar{
-          display: grid;
-          width: 30%;
-          height: 90%;
-          align-items: center;
-      }
-       .quar img{
-        width: 80px; 
-        height: 30px; 
-          
-      }
-      .cin{
-          width: 30%;
-          margin-left: 10px;
-      }
-      .cink{
-          width: 60%;
-          margin-left: 100px;
-          font-size: 10px;
-      }
-      .pro{
-          margin-right: -100px;
-          margin-left: 90px;
-      }
-      .pro p{
-          font-size: 13px;
-          font-weight: 600;
-          margin-left: 25px;
-      }
-      .pro progress{
-          width: 100%;
-         margin-top: 50px;
-          margin-left: 20px;
-          
-      }
-      .pro1{
-          width: 15%;
-          height: 10%;
-          margin-right: 20px;
-      }
-      .pro2{
-          width: 15%;
-          height: 10%;
-          margin-right: 20px;
-      }
-      .pro span{
-         font-size: 10px;
-         font-weight: 600;
-         margin-left: 48px;
-         margin-top: 30px;
-      }
-      .avancer{
-          width: 30%;
-          display: flex;
-          
-      }
-
-      .six{
-          display: block;
-          width: 30%;
-          align-items: center;
-          background-color: #A5C0AD;
-      }
-      .avatar{
-          width: 10%;
-          height: 10%;
-          
-      }
-      .avatar img{
-          margin-left: -60px;
-           width: 30%;
-           height: 20%;
-      }
-      .imagejc{
-          margin-left: 1px;
-          margin-top: 55px;
-      }
-      .jane{
-          height: 400px;
-          width: 270px; 
-          margin-left: 50px;
-          margin-top: 55px;
-          background-color:#A5C0AD ;
-      }
-      .cooper{
-          height: 400px;
-          width: 270px; 
-          margin-left: 0px;
-          background-color:#A5C0AD 
-      }
-      .jane h4{
-         width: 25.5%;
-         height: 10%;
-         font-size: 8px;
-         margin-top: -265px;
-         margin-left: -50px;
-      }
-      .imagejj{
-          margin-left: 1px;
-          margin-top: 55px;
-      }
-      .jacob{
-          height: 400px;
-          width: 270px; 
-          margin-left: 50px;
-          margin-top: 55px;
-          background-color: #A5C0AD;
-      }
-      .jacob h4{
-          width: 113.5%;
-          height: 10%;
-          font-size: 8px;
-          margin-left:-260px;
-          margin-top: -270px;
-      } 
-      .jones{
-          height: 400px;
-          width: 270px; 
-          margin-left: -200px;
-          
-      }
-      .imagela{
-          margin-left: 1px;
-          margin-top: 55px;
-      }
-      .leslie {
-          height: 400px;
-          width: 270px; 
-          margin-left: 50px;
-          margin-top: 55px;
-          background-color: #A5C0AD;
-          }
-      .leslie h4{
-         width: 41.5%;
-         height: 10%;
-         font-size: 8px;
-         margin-top: -265px;
-         margin-left: -140px;
-      } 
-      .alex{
-          height: 400px;
-          width: 270px; 
-          margin-left: -80px;
-          
-      }
-      .imagebs{
-          margin-left: 1px;
-          margin-top: 55px;
-      }
-      .brook{
-          height: 400px;
-          width: 270px; 
-          margin-left: 50px;
-          background-color:white;
-      }
-      .brook h4{
-          width: 25.5%;
-          height: 8%;
-          font-size: 8px;
-          margin-top: -255px;
-          margin-left: -500px;
-          background-color: white;
-      } 
-      .silm{
-          height: 400px;
-          width: 270px; 
-          margin-left: -400px;
-      }
-
-      .sept{
-          width: 30%;
-          background-color: white;
-          text-align: center;
-      }
-     
-      footer{
-         
-          width: 30%;
-          background-color: rgb(238, 231, 231);
-      }
-      footer h4{
-         font-size: 15px;
-         text-align: center;
-      }
-      footer h6{
-          text-align: center;
-          font-size: 12px;
-          padding: 80px;
-      }
-      .foot{
-          display: inline-flex;
-      }
-      .foot1{
-          font-size: 10px;
-          margin-left: 70px;
-          margin-top: 65px;
-      }
-      .foot2{
-          width: 15%;
-          font-size: 10px;
-          margin-left: 50px;
-          margin-top: 55px;
-      }
-      .foot3{
-          font-size: 10px;
-          margin-left: 50px;
-          margin-top: 65px;
-      }
-      .foot4{
-          font-size: 10px;
-          margin-left: 30px;
-          margin-top: 65px;
-      }
-
-
+    boby{
+        width: 100%;
+        margin: 0;
+        padding: 0;
     }
+    header{
+        width: 5%;
+        display: none;
+    }
+}
+
+   
+   
+    
+
+        
+      
 
     @media(max-width:768px){
-       
-        .deb{
-          width: 30%;
-          height: 67%;
-          font-size: 10px;
-          background-color: aqua;
-        }
-        .un{
-            width: 30%;
-            align-items: center;
-        }
-        .logo img{
-            width: 10%;
-            height: 15%;
-            margin-left: 180px;
-        }
-        .text1{
-            width: 40%;
-            margin-bottom: 25%;
-            margin-left: 80px;
-        }
-        .deux{
-            height: 30%;
-            width: 30%;
-            align-items: center;
-            margin-left: 20px;
-        }
-        .text3{
-            margin-left: 5px;
-            height: 20%;
-            width: 20%;
-            border: none;
-        }
-        .text3 img{
-         width: 70%;
-         display: block;
-         margin-right: 10px;
-         margin-bottom: 200px;
-        }
-        .text4 h2{
-            display: block;
-            font-size: 12px;
-            font-weight: 600;
-            margin-left: 180px;
-            margin-bottom: 100px;
-        }
-        .text4 p{
-            width: 30%;
-            font-size: 8px;
-            margin-left: 170px;
-            margin-bottom: 80px;
-        }
-        .trois{
-            width: 30%;
-            align-items: center;
-        }
-        .trois h1{
-            margin-LEFt: 180px;
-            font-size: 12px;
-            font-weight: 600;
-        }
-        .trois p{
-            margin-left: 20px;
-            font-size: 8px;
-        }
-        .quar{
-            display: grid;
-            width: 30%;
-            height: 90%;
-            align-items: center;
-        }
-         .quar img{
-          width: 80px; 
-          height: 30px; 
-            
-        }
-        .cin{
-            width: 30%;
-            margin-left: 10px;
-        }
-        .cink{
-            width: 60%;
-            margin-left: 100px;
-           
-            font-size: 10px;
-        }
-        .pro{
-            margin-right: -100px;
-            margin-left: 90px;
-        }
-        .pro p{
-            font-size: 13px;
-            font-weight: 600;
-            margin-left: 25px;
-        }
-        .pro progress{
-            width: 100%;
-           margin-top: 50px;
-            margin-left: 20px;
-            
-        }
-        .pro1{
-            width: 15%;
-            height: 10%;
-            margin-right: 20px;
-        }
-        .pro2{
-            width: 15%;
-            height: 10%;
-            margin-right: 20px;
-        }
-        .pro span{
-           font-size: 10px;
-           font-weight: 600;
-           margin-left: 48px;
-           margin-top: 30px;
-        }
-        .avancer{
-            width: 30%;
-            display: flex;
-            
-        }
-
-        .six{
-            display: block;
-            width: 30%;
-            align-items: center;
-            background-color: #A5C0AD;
-        }
-        .avatar{
-            width: 10%;
-            height: 10%;
-            
-        }
-        .avatar img{
-            margin-left: -60px;
-             width: 30%;
-             height: 20%;
-        }
-        .imagejc{
-            margin-left: 1px;
-            margin-top: 55px;
-        }
-        .jane{
-            height: 400px;
-            width: 270px; 
-            margin-left: 50px;
-            margin-top: 55px;
-            background-color:#A5C0AD ;
-        }
-        .cooper{
-            height: 400px;
-            width: 270px; 
-            margin-left: 0px;
-            background-color:#A5C0AD 
-        }
-        .jane h4{
-           width: 25.5%;
-           height: 10%;
-           font-size: 8px;
-           margin-top: -265px;
-           margin-left: -50px;
-        }
-        .imagejj{
-            margin-left: 1px;
-            margin-top: 55px;
-        }
-        .jacob{
-            height: 400px;
-            width: 270px; 
-            margin-left: 50px;
-            margin-top: 55px;
-            background-color: #A5C0AD;
-        }
-        .jacob h4{
-            width: 113.5%;
-            height: 10%;
-            font-size: 8px;
-            margin-left:-260px;
-            margin-top: -270px;
-        } 
-        .jones{
-            height: 400px;
-            width: 270px; 
-            margin-left: -200px;
-            
-        }
-        .imagela{
-            margin-left: 1px;
-            margin-top: 55px;
-        }
-        .leslie {
-            height: 400px;
-            width: 270px; 
-            margin-left: 50px;
-            margin-top: 55px;
-            background-color: #A5C0AD;
-            }
-        .leslie h4{
-           width: 41.5%;
-           height: 10%;
-           font-size: 8px;
-           margin-top: -265px;
-           margin-left: -140px;
-        } 
-        .alex{
-            height: 400px;
-            width: 270px; 
-            margin-left: -80px;
-            
-        }
-        .imagebs{
-            margin-left: 1px;
-            margin-top: 55px;
-        }
-        .brook{
-            height: 400px;
-            width: 270px; 
-            margin-left: 50px;
-            background-color:white;
-        }
-        .brook h4{
-            width: 25.5%;
-            height: 8%;
-            font-size: 8px;
-            margin-top: -255px;
-            margin-left: -500px;
-            background-color: white;
-        } 
-        .silm{
-            height: 400px;
-            width: 270px; 
-            margin-left: -440px;
-        }
-
-        .sept{
-            width: 30%;
-            background-color: white;
-            text-align: center;
-        }
-       
-        footer{
-           
-            width: 30%;
-            background-color: rgb(238, 231, 231);
-        }
-        footer h4{
-           font-size: 15px;
-           text-align: center;
-        }
-        footer h6{
-            text-align: center;
-            font-size: 12px;
-            padding: 80px;
-        }
-        .foot{
-            display: inline-flex;
-        }
-        .foot1{
-            font-size: 10px;
-            margin-left: 70px;
-            margin-top: 65px;
-        }
-        .foot2{
-            width: 15%;
-            font-size: 10px;
-            margin-left: 50px;
-            margin-top: 55px;
-        }
-        .foot3{
-            font-size: 10px;
-            margin-left: 50px;
-            margin-top: 65px;
-        }
-        .foot4{
-            font-size: 10px;
-            margin-left: 30px;
-            margin-top: 65px;
-        }
-    }
-
-
         
-
+    }
