--- a/style.css
+++ b/style.css
@@ -332,41 +332,38 @@ footer h6{
         font-size: 8px;
         background-color: aqua;
       }
-      nav {
-        margin-left: -80px;
-      }
-      main{
-        width: 100%;
-      }
       .un{
         background: plum;
         background-image: none;
-          width: 100%;
-          height: 50%;
+        width: 100%;
+        height: 50%;
       }
       .logo img{
           width: 50%;
           height: 80%;
-          margin-left:-60px;
+          margin-left:-20px;
       }
       .text1{
         width: 150px;
-        margin-left:-120px;
+        margin-left:-75px;
         margin-top: 40px; 
       }
       .text1 p{
           font-size: 15px;
           margin-bottom: 50px;
-          margin-left: 30px;
+          margin-left: 0px;
       } 
       .text2 p{
         font-size: 15px;
-        display: inline-flex;
+        display: flex;
         justify-content: center;
-        margin-left: -225px;
+        margin-left: -100px;
+        height: 200px;
+        line-height: 25px;
       }
       .deux{
       display: grid;
+
       /* grid-template-columns: 0fr 1fr 1fr; */
       margin-left: -60px;
       margin-bottom: 130px;
